--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -130,6 +130,7 @@
 
 \section{Introduction}
 
+Teaching software engineering represents not only a challenge, but a series of challenges to the teacher, who needs the student to develop a series of marketable skills at the same time that development is assessed in order to obtain a grade. At the same time, mainstream software development follows an {\em agile mindset}, following the Agile Manifesto \cite{agilemanifesto},
 
 We will try to answer the following research questions:\begin{itemize}
 \item {\bf RQ1:} Can we measure the effect of agile methodologies on the learning outcomes?
@@ -141,7 +142,7 @@ We will try to answer the following research questions:\begin{itemize}
 The rest of the paper is organized as follows: next we will present the state of the art in learning analytics applied to evaluative formation and flipped learning. The class setup, as well as the way data is collected will be presented next, in Section \ref{sec:setup}. The results of the analysis will be presented in Section \ref{sec:results}, and finally we will draw some conclusions in Section \ref{sec:conclusions}.
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{../rpg.bib}
+\bibliography{../rpg.bib,../dev.bib}
 
 
 \end{document}
