Agile teaching introduced #15

--- a/agile.bib
+++ b/agile.bib
@@ -1,3 +1,14 @@
+@article{krehbiel2017agile,
+  title={Agile Manifesto for Teaching and Learning.},
+  author={Krehbiel, Timothy C and Salzarulo, Peter A and Cosmah, Michelle L and Forren, John and Gannod, Gerald and Havelka, Douglas and Hulshult, Andrea R and Merhout, Jeffrey},
+  journal={Journal of Effective Teaching},
+  volume={17},
+  number={2},
+  pages={90--111},
+  year={2017},
+  publisher={ERIC}
+}
+
 @article{katz2020software,
   title={Software Sustainability \& High Energy Physics},
   author={Katz, Daniel S and Malik, Sudhir and Neubauer, Mark S and Stewart, Graeme A and Assamagan, K{\'e}t{\'e}vi A and Becker, Erin A and Hong, Neil P Chue and Cosden, Ian A and Meehan, Samuel and Moyse, Edward JW and others},
