--- a/agile.bib
+++ b/agile.bib
@@ -9,6 +9,16 @@
   publisher={ERIC}
 }
 
+@inproceedings{chun2004agile,
+  title={The agile teaching/learning methodology and its e-learning platform},
+  author={Chun, Andy Hon Wai},
+  booktitle={Advances in Web-Based Learning--ICWL 2004: Third International Conference, Beijing, China, August 8-11, 2004. Proceedings 3},
+  pages={11--18},
+  year={2004},
+  organization={Springer}
+}
+
+
 @article{katz2020software,
   title={Software Sustainability \& High Energy Physics},
   author={Katz, Daniel S and Malik, Sudhir and Neubauer, Mark S and Stewart, Graeme A and Assamagan, K{\'e}t{\'e}vi A and Becker, Erin A and Hong, Neil P Chue and Cosden, Ian A and Meehan, Samuel and Moyse, Edward JW and others},
@@ -53,23 +63,15 @@
   doi={10.1109/HICSS.2016.665}}
 
 @INPROCEEDINGS{8817160,
-
   author={I. {Arapakis} and Y. {Becerra} and O. {Boehm} and G. {Bravos} and V. {Chatzigiannakis} and C. {Cugnasco} and G. {Demetriou} and I. {Eleftheriou} and J. {Etienne Mascolo} and L. {Fodor} and S. {Ioannidis} and D. {Jakovetic} and L. {Kallipolitis} and E. {Kavakli} and D. {Kopanaki} and N. {Kourtellis} and M. {Maawad Marcos} and R. {Martin de Pozuelo} and N. {Milosevic} and G. {Morandi} and E. {Pages Montanera} and G. {Ristow} and R. {Sakellariou} and R. {Sirvent} and S. {Skrbic} and I. {Spais} and G. {Vasiliadis} and M. {Vinov}},
-
-  booktitle={2019 IEEE World Congress on Services (SERVICES)}, 
-
-  title={Towards Specification of a Software Architecture for Cross-Sectoral Big Data Applications}, 
-
+  booktitle={2019 IEEE World Congress on Services (SERVICES)},
+  title={Towards Specification of a Software Architecture for Cross-Sectoral Big Data Applications},
   year={2019},
-
   volume={2642-939X},
-
-  number={},
-
   pages={394-395},
+  doi={10.1109/SERVICES.2019.00120}
+}
 
-  doi={10.1109/SERVICES.2019.00120}}
-  
 @misc{abrahamsson2017agile,
       title={Agile Software Development Methods: Review and Analysis}, 
       author={Pekka Abrahamsson and Outi Salo and Jussi Ronkainen and Juhani Warsta},
