#15 incorporating key performance indicators

--- a/agile.bib
+++ b/agile.bib
@@ -9,6 +9,14 @@
   publisher={ERIC}
 }
 
+@article{mannila2013key,
+  title={Key performance indicators in agile software development},
+  author={Mannila, Jukka},
+  year={2013},
+  publisher={Satakunnan ammattikorkeakoulu}
+}
+
+
 @inproceedings{chun2004agile,
   title={The agile teaching/learning methodology and its e-learning platform},
   author={Chun, Andy Hon Wai},
