#15 on learning analytics

--- a/formative-evaluation.bib
+++ b/formative-evaluation.bib
@@ -99,3 +99,15 @@ author = {Dirk Tempelaar and Bart Rienties and Jenna Mittelmeier and Quan Nguyen
 keywords = {Learning analytics, Formative assessment, Learning dispositions, Dispositional learning analytics, e-tutorial},
 abstract = {How learning disposition data can help us translating learning feedback from a learning analytics application into actionable learning interventions, is the main focus of this empirical study. It extends previous work (Tempelaar, Rienties, & Giesbers, 2015), where the focus was on deriving timely prediction models in a data rich context, encompassing trace data from learning management systems, formative assessment data, e-tutorial trace data as well as learning dispositions. In this same educational context, the current study investigates how the application of cluster analysis based on e-tutorial trace data allows student profiling into different at-risk groups, and how these at-risk groups can be characterized with the help of learning disposition data. It is our conjecture that establishing a chain of antecedent-consequence relationships starting from learning disposition, through student activity in e-tutorials and formative assessment performance, to course performance, adds a crucial dimension to current learning analytics studies: that of profiling students with descriptors that easily lend themselves to the design of educational interventions.}
 }
+
+
+@article{fuchs1986effects,
+  title={Effects of systematic formative evaluation: A meta-analysis},
+  author={Fuchs, Lynn S and Fuchs, Douglas},
+  journal={Exceptional children},
+  volume={53},
+  number={3},
+  pages={199--208},
+  year={1986},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
