--- a/paper/learning-analytics.bib
+++ b/paper/learning-analytics.bib
@@ -8,3 +8,23 @@
   year={2013},
   publisher={Taylor \& Francis}
 }
+
+@article{scheffel2014quality,
+  title={Quality indicators for learning analytics},
+  author={Scheffel, Maren and Drachsler, Hendrik and Stoyanov, Slavi and Specht, Marcus},
+  journal={Journal of Educational Technology \& Society},
+  volume={17},
+  number={4},
+  pages={117--132},
+  year={2014},
+  publisher={JSTOR}
+}
+
+@article{elias2011learning,
+  title={Learning analytics},
+  author={Elias, Tanya},
+  journal={Learning},
+  pages={1--22},
+  year={2011},
+  publisher={Citeseer}
+}
