--- a/pbl.bib
+++ b/pbl.bib
@@ -1,35 +1,14 @@
-
-
-
-
-
-
 @article{doi:10.1177/1365480216659733,
 author = {Dimitra Kokotsaki and Victoria Menzies and Andy Wiggins},
 title ={Project-based learning: A review of the literature},
-
 journal = {Improving Schools},
 volume = {19},
 number = {3},
 pages = {267-277},
 year = {2016},
 doi = {10.1177/1365480216659733},
-
-URL = { 
-    
-        https://doi.org/10.1177/1365480216659733
-    
-    
-
-},
-eprint = { 
-    
-        https://doi.org/10.1177/1365480216659733
-    
-    
-
-}
-,
+URL = {https://doi.org/10.1177/1365480216659733},
+eprint = {https://doi.org/10.1177/1365480216659733},
     abstract = { Project-based learning (PBL) is an active student-centred form of instruction which is characterised by students’ autonomy, constructive investigations, goal-setting, collaboration, communication and reflection within real-world practices. It has been explored in various contexts and in different phases of schooling, from primary to higher education. The majority of the reviewed studies were based on a quasi-experimental pretest–posttest design with some baseline equivalence established but no random allocation of participants to control and experimental groups, and as a result, a causal link between PBL instruction and positive student outcomes cannot be established with certainty. Modern digital technology, group processes of high quality, teachers’ ability to effectively scaffold students’ learning and provide guidance and support, the balance between didactic instruction with in-depth inquiry methods and well-aligned assessment have been identified in the literature as facilitating factors in the implementation of PBL. The article concludes with six key recommendations considered to be essential for the successful adoption of a PBL approach in the mainstream school setting. }
 }
 
@@ -51,26 +30,6 @@ eprint = {
   pages={98-100},
   doi={10.1109/MC.2015.268}}
 
-
-
-
-
-@article{fuchs1986effects,
-  title={Effects of systematic formative evaluation: A meta-analysis},
-  author={Fuchs, Lynn S and Fuchs, Douglas},
-  journal={Exceptional children},
-  volume={53},
-  number={3},
-  pages={199--208},
-  year={1986},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
-}
-
-
-
-
-
-
 @article{otero2018flipped,
   title={Flipped learning and formative evaluation in higher education},
   author={Otero-Saborido, Fernando M and S{\'a}nchez-Oliver, Antonio J and Grimaldi-Puyana, Mois{\'e}s and {\'A}lvarez-Garc{\'\i}a, Jos{\'e}},
@@ -81,8 +40,6 @@ eprint = {
   year={2018},
   publisher={Emerald Publishing Limited}
 }
-
-
 
 @article{felder2007random,
   title={Random thoughts: Sermons for grumpy campers},
