#15 que se habia perdido

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -136,14 +136,13 @@ One of the ways of teaching a mindset is having that same mindset while teaching
 
 Manifestos are never enough either in development or teaching, and agile development encourages the adoption of best practices in every phase of development; but the last part of the manifesto which talks about continuous improvement, as well as the fact that we are talking about {\em best} practices, would need some way of measuring progress and how adopted practices affect the classroom. This is why we would like to add a new item to the manifesto: {\em learning analytics} \cite{clow2013overview} over anecdotal evidence or end-of-class failure/success rates.
 
-Within this agile mindset, there are teaching methodologies that fit better; adopting these best practices is the first step towards agile teaching. We will focus on two of them that fit well with each other: project-based learning gives the student autonomy (which is one of the items in the manifesto) through the development of a project across one or several subjects \citye{krajcik2006project}
+Within this agile mindset, there are teaching methodologies that fit better; adopting these best practices is the first step towards agile teaching. We will focus on two of them that fit well with each other: project-based learning gives the student autonomy (which is one of the items in the manifesto) through the development of a project across one or several subjects \cite{krajcik2006project}; formative evaluation \cite{tessmer1994formative} also fits the autonomous learning part of the manifesto, but also focuses on learning objectives, since it pursues helping the student through continuous feedback on their submitted work (that advances the project mentioned above). This feedback helps continuous improvement of the project they are working with, which is other of the items in the manifesto.
 
-We will try to answer the following research questions:\begin{itemize}
-\item {\bf RQ1:} Can we measure the effect of agile methodologies on the learning outcomes?
+In this paper we will describe the experience along 3 years in a 4th year (7th semester) subject in the Computer Science degree at the University of Granada, Spain; the subject deals with Cloud Computing, so the project needs to be based on tha final objective. But besides being the description of the experience, we will try to answer the following research questions:\begin{itemize}
+\item {\bf RQ1:} Can we measure the effect of agile-inspired methodologies on the learning outcomes?
 \item {\bf RQ2:} Are there early indicators or class success or failure?
-\item {\bf RQ3:} Can we measure the effect of flipped learning on the learning outcomes?
+\item {\bf RQ3:} Can we measure the effect of flipped learning through the gathered software analytics?
 \end{itemize}
-
 
 The rest of the paper is organized as follows: next we will present the state of the art in learning analytics applied to evaluative formation and flipped learning. The class setup, as well as the way data is collected will be presented next, in Section \ref{sec:setup}. The results of the analysis will be presented in Section \ref{sec:results}, and finally we will draw some conclusions in Section \ref{sec:conclusions}.
 
