--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -138,8 +138,8 @@ Manifestos are never enough either in development or teaching, and agile develop
 
 Within this agile mindset, there are teaching methodologies that fit better; adopting these best practices is the first step towards agile teaching. We will focus on two of them that fit well with each other: project-based learning gives the student autonomy (which is one of the items in the manifesto) through the development of a project across one or several subjects \cite{krajcik2006project}; formative evaluation \cite{tessmer1994formative} also fits the autonomous learning part of the manifesto, but also focuses on learning objectives, since it pursues helping the student through continuous feedback on their submitted work (that advances the project mentioned above). This feedback helps continuous improvement of the project they are working with, which is other of the items in the manifesto.
 
-In this paper we will describe the experience along 3 years in a 4th year (7th semester) subject in the Computer Science degree at the University of Granada, Spain; the subject deals with Cloud Computing, so the project needs to be based on tha final objective. But besides being the description of the experience, we will try to answer the following research questions:\begin{itemize}
-\item {\bf RQ1:} Can we measure the effect of agile-inspired methodologies on the learning outcomes?
+In this paper we will describe the experience carried out in the last three school years in a 4th year (7th semester) subject in the Computer Science degree at the University of Granada, Spain; the subject deals with Cloud Computing, so the project needs to be working towards that final objective. But alongside the description of the experience, we will try to answer the following research questions:\begin{itemize}
+\item {\bf RQ1:} Can you leverage metrics to improve individual and collective learning?
 \item {\bf RQ2:} Are there early indicators or class success or failure?
 \item {\bf RQ3:} Can we measure the effect of flipped learning through the gathered software analytics?
 \end{itemize}
