#15 formative assessment + learning analytics

--- a/learning-analytics.bib
+++ b/learning-analytics.bib
@@ -16,3 +16,13 @@
   year={2011},
   publisher={Citeseer}
 }
+@article{stanja2023formative,
+  title={Formative assessment strategies for students' conceptions—The potential of learning analytics},
+  author={Stanja, Judith and Gritz, Wolfgang and Krugel, Johannes and Hoppe, Anett and Dannemann, Sarah},
+  journal={British Journal of Educational Technology},
+  volume={54},
+  number={1},
+  pages={58--75},
+  year={2023},
+  publisher={Wiley Online Library}
+}
