#15 explaining the basics

--- a/learning-analytics.bib
+++ b/learning-analytics.bib
@@ -26,3 +26,22 @@
   year={2023},
   publisher={Wiley Online Library}
 }
+
+@inproceedings{aljohani2013learning,
+  title={Learning analytics and formative assessment to provide immediate detailed feedback using a student centered mobile dashboard},
+  author={Aljohani, Naif Radi and Davis, Hugh C},
+  booktitle={2013 Seventh international conference on next generation mobile apps, services and technologies},
+  pages={262--267},
+  year={2013},
+  organization={IEEE}
+}
+@article{zhang2023learning,
+  title={Learning analytics in formative assessment: A systematic literature review},
+  author={ZHANG, Ke and YILMAZ, Ramazan and USTUN, Ahmet Berk and YILMAZ, Fatma Gizem KARAO{\u{G}}LAN},
+  journal={Journal of Measurement and Evaluation in Education and Psychology},
+  volume={14},
+  number={{\"O}zel Say{\i}},
+  pages={359--381},
+  year={2023},
+  publisher={E{\u{g}}itimde ve Psikolojide {\"O}l{\c{c}}me ve De{\u{g}}erlendirme Derne{\u{g}}i}
+}
