Closes #15, with a short SoA to keep the paper focused
It's a conference paper, after all...

--- a/learning-analytics.bib
+++ b/learning-analytics.bib
@@ -45,3 +45,12 @@
   year={2023},
   publisher={E{\u{g}}itimde ve Psikolojide {\"O}l{\c{c}}me ve De{\u{g}}erlendirme Derne{\u{g}}i}
 }
+
+@article{tempelaar2020learning,
+  title={Learning feedback based on dispositional learning analytics},
+  author={Tempelaar, Dirk and Nguyen, Quan and Rienties, Bart},
+  journal={Machine Learning Paradigms: Advances in Learning Analytics},
+  pages={69--89},
+  year={2020},
+  publisher={Springer}
+}
