--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -122,6 +122,10 @@ What seems to be missing is, however, a single set of learning process measureme
 \section{Class set up and methodology}
 \label{sec:setup}
 
+As indicated previously, we follow problem-based learning; this implies that the students need to work on their own project for the duration; they will do so along 10 objectives, numbered from 0 to 9. Every student will work on their own repository; for every objective they will create a branch and a pull request from that branch to their main one; a pull request is a "request to merge" a set of changes; acceptance of that PR will imply merging into the main branch (and, in real world, usually deployment to production). This class setup matches the agile philosophy which matches interaction and working software over "comprehensive documentation" (which, in a class environment, would mainly be "theoretical" classes and memory-based exams). At the same time, PRs are the main interaction medium in software development: it allows members of the team to perform quality (and other, such as compliance) checks on the code that is going to be used; this matches the requirements of formative evaluation too. The professor (and other students who have also overcome that specific objective) will review that PR, request changes if it falls short of reaching the objective, and eventually accept it when it does.
+
+
+
 \section{Results}
 \label{sec:results}
 
